refactor: align user modules with accounts (#333)
